GP2Y0A710K で距離測定できるように

--- a/ansible/roles/watcher/templates/toire.conf.j2
+++ b/ansible/roles/watcher/templates/toire.conf.j2
@@ -1,5 +1,5 @@
 [program:toire]
-command=/var/work/toire/.env/bin/python ./toire/sensor.py
+command=/var/work/toire/.env/bin/python ./main.py
 user=root
 process_name=%(program_name)s
 numprocs=1
